welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:10: error: type mismatch;
 found   : Array[Int]
 required: String
    tableau = tableau + T
                        ^